[package]
name = "micro-matrix-bot"
version = "0.1.0"
authors = ["Luke Petrolekas <reclarion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
rusqlite = "0.24.2"
regex = "1.5.4"
rand = "0.8.4"
lazy_static = "1.4.0"